fixed broken css that was breaking the site in chrome and IE

--- a/css/style.css
+++ b/css/style.css
@@ -364,7 +364,7 @@ h6 {
 #info_links .selected a {
 	color: #2B477D;
 	background-color: #cdcdcd;
-	background: rgba(205,205,205, 1;
+	background: rgba(205,205,205, 1);
 }
 
 /* File Type Icon Styling */
